fixed visible box in checkbox 2.06.2021

--- a/src/style__checkbox.css
+++ b/src/style__checkbox.css
@@ -11,6 +11,8 @@
     position: absolute;
     width: 1px;
     height: 1px;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
 }
 
 .checkbox__checked-end, .checkbox__focused-end, .checkbox__disabled-end, .checkbox__all-states-end {
